@startuml ClassDiagram
class User{
    -username: str
    -email:str
    -passwword:str
    -text_record : list
    +creat_acount()
    +login()
    +delete_acount()
    +edit_password()
    +insert_text()
    +open_savetext()
    +save_text()
    +edit_text()
    +delete_text()
    +search_text()
    +delete_text()
    
}
class Role{
    -name:str
    -descripcion: str
    +change_role()
}
enum Roles{
    user
    admin
}
class Text{
    -data : str
    -lenght: long
    -language : str
    +check_lenght(c:lenght):bool
    +edit_text(d:new_data):data
    +encrypt_text(a: data)
}
class encryptedText{
    -data : str
    -lenght: long
    -text_password: str
    +decipher_text(): text
}

User -- Role
Role - Roles
Text -- encryptedText
@enduml